[tool.poetry]
name = "pyoin"
version = "0.1.0"
description = "Python apps for qoin"
authors = ["Ryosuke Hayashi <hayashi@hayashikun.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18"
matplotlib = "^3.3"
fire = "^0.3"
grpcio = "^1.32"
grpcio-tools = "^1.32"
opencv-python = "^3.4"
tensorflow = "^2.3"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2"
jupyterlab_code_formatter = "1.3.6"
isort = "^5.5"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
